src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
:global {

    :root {
        --give-primary-color: #86b785;
    }

    .post-type-give_forms #wpbody {
        -webkit-font-smoothing: antialiased;
        box-sizing: border-box;

        & > a {
            text-decoration: underline;
        }
    }

    .post-type-give_forms #wpbody-content {
        box-sizing: border-box;
    }

    .post-type-give_forms #wpbody::after {
        all: revert;
    }

    .give-visually-hidden {
        position: absolute;
        width: 1px;
        height: 1px;
        padding: 0;
        margin: -1px;
        overflow: hidden;
        clip: rect(0, 0, 0, 0);
        white-space: nowrap;
        border-width: 0;
    }

    #wpcontent {
        padding: 0;
    }
}

.page {
    background-color: var(--givewp-neutral-25);
    box-sizing: border-box;
    color: var(--givewp-neutral-900);
    display: flex;
    flex-direction: column;
    font-family: Inter, system-ui, sans-serif;
    font-size: 1rem;
    gap: var(--givewp-spacing-4);

    *,
    ::before,
    ::after {
        box-sizing: inherit;
    }
}

.pageHeader {
    align-items: center;
    background-color: var(--givewp-shades-white);
    border-bottom: 1px solid var(--givewp-neutral-100);
    display: flex;
    flex-wrap: wrap;
    gap: var(--givewp-spacing-4);
    justify-content: space-between;
    padding: var(--givewp-spacing-7) var(--givewp-spacing-6);
    position: sticky;
    top: 2rem;
    z-index: 100;

    & > * {
        flex-shrink: 0;
    }

    + :global(.wp-header-end) + :global(.give-notice) {
        margin: 0 var(--givewp-spacing-6);
    }

    .testModeBadge {
        align-items: center;
        background: var(--givewp-orange-400);
        border-radius: var(--givewp-rounded-full);
        border: 1px solid var(--statusBadgeBorderColor);
        color: var(--givewp-shades-white);
        display: flex;
        font-size: 0.75rem;
        font-weight: 600;
        gap: var(--givewp-spacing-1);
        justify-content: center;
        padding: var(--givewp-spacing-1) var(--givewp-spacing-3);
        text-align: center;
        text-transform: uppercase;
    }
}

.pageHeader,
.pageContent {
    .primaryActionButton,
    .secondaryActionButton {
        display: flex;
        align-items: center;
        border-radius: var(--givewp-rounded-4);
        font-size: 0.875rem;
        font-weight: 500;
        line-height: 1.43;
        text-align: center;
        padding: var(--givewp-spacing-2) var(--givewp-spacing-4);

        svg {
            margin: 3px 0 0 8px !important;
        }
    }

    .secondaryActionButton {
        color: var(--givewp-neutral-900);
        background-color: var(--givewp-neutral-100);
        border-color: var(--givewp-neutral-100);

        &:hover {
            background-color: var(--givewp-neutral-200);
            border-color: var(--givewp-neutral-200);
            color: var(--givewp-neutral-900);
        }
    }
}

.filtersRow {
    align-items: center;
    background-color: var(--givewp-neutral-50);
    display: flex;
    height: 3.25rem;
    justify-content: space-between;
    margin-inline: var(--givewp-spacing-6);
    padding: var(--givewp-spacing-2) {
        left: var(--givewp-spacing-6);
    }
}

.flexRow {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--givewp-spacing-2);
    flex-wrap: wrap;
}

.flexRow:not(:first-child) {
    flex: 1;
    justify-content: flex-end;
}

ul[role='document'] + .flexRow,
ul[role='document'] + .flexRow + .flexRow {
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: var(--givewp-spacing-2);
    margin-bottom: var(--givewp-spacing-4);

    select {
        min-width: 100%;
        height: 48px;
        padding: 0 var(--givewp-spacing-4);
        font-size: 1rem;
    }
}

ul[role='document'] + .flexRow {
    margin: var(--givewp-spacing-6) 0;
}

.justifyContentEnd {
    flex: 1;
    justify-content: flex-end;
}

.pageTitle {
    color: var(--givewp-neutral-900);
    font-size: 1.5rem;
    font-weight: 700;
    line-height: 1.5;
    margin: 0;
}

.pageContent {
    background-color: var(--givewp-shades-white);
    display: flex;
    flex-direction: column;
    gap: var(--givewp-spacing-2);
    margin-inline: var(--givewp-spacing-6);
    padding: var(--givewp-spacing-6);
}

.pageActions {
    align-items: center;
    column-gap: 2rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 100%;

    & > * {
        flex-shrink: 0;
    }
}

.alignEnd {
    justify-content: flex-end;
}

.button:is(:global(.button)) {
    border-radius: 0.125rem;
    font-size: 0.875rem;
    font-weight: 600;
    line-height: 1.25rem;
    padding: 0.5rem 1rem;
}

.buttonSecondary:is(:global(.button)) {
    background-color: #fff;

    &:hover {
        background-color: #f6f7f7;
    }
}

.addCampaignFormButton {
    $depth: 0px 1px 0px rgba(0, 0, 0, 0.25);

    background-color: var(--givewp-neutral-100);
    border-radius: 0.25rem;
    border: none;
    color: var(--givewp-neutral-900);
    font-family: 'Inter';
    font-size: 0.875rem;
    font-weight: 500;
    display: flex;
    align-items: center;
    block-size: 2.5rem;
    padding: 0.5rem 1rem;
    transition-property: filter, color, outline;
    transition-duration: 180ms;
    transition-timing-function: ease-in;
    cursor: pointer;
    width: fit-content;
    margin-bottom: 0.5rem;

    &:is(a) {
        text-decoration: none;
    }

    &:is(:hover, :active, :focus) {
        background-color: var(--givewp-neutral-200);
        color: var(--givewp-neutral-900);
    }

    &:active {
        filter: contrast(90%);
    }

    &:focus {
        box-shadow: $depth;
        outline: 0.125rem solid #2271B1;
        outline-offset: 0.25em;
    }
}
/* ... */

